[tool.poetry]
name = "csv-to-kml"
version = "0.1.0"
description = "Convert CSV files with addresses or coordinates to KML format for Google Earth and mapping applications"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/yourusername/csv-to-kml"
repository = "https://github.com/yourusername/csv-to-kml"
keywords = ["csv", "kml", "geocoding", "gis", "mapping", "google-earth"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: GIS",
]
packages = [{include = "csv_to_kml"}]

[tool.poetry.dependencies]
python = "^3.8"
geopy = { version = "^2.4", optional = true }

[tool.poetry.extras]
geocoding = ["geopy"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
black = "^23.0"
ruff = "^0.1"

[tool.poetry.scripts]
csv-to-kml = "csv_to_kml.csv_to_kml:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []